[package]
name = "lowly"
version = "0.1.0"
edition = "2021"
description = "EIRTeam game deployment tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
config = "0.13.3"
serde = "1.0.188"
serde_derive = "1.0.188"
tinytemplate = "1.2.1"
